--- a/sheet-01/pyproject.toml
+++ b/sheet-01/pyproject.toml
@@ -10,7 +10,9 @@ dependencies = [
     "numpy>=2.3.5",
     "pandas>=2.3.3",
     "pip>=25.3",
+    "pywavelets>=1.9.0",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
+    "torch>=2.9.1",
     "tqdm>=4.67.1",
 ]
